Add opsworks layer and instance

--- a/CloudFormation/aws.environment.template
+++ b/CloudFormation/aws.environment.template
@@ -162,7 +162,7 @@
         "StackVPC", "StackNatBastion"
       ],
       "Properties": {
-        "TemplateURL": { "Fn::Join": [ "", [ "https://", { "Ref": "TemplateURL4CF" }, "/aws.module-main.template" ] ] },
+        "TemplateURL": { "Fn::Join": [ "", [ "https://", { "Ref": "TemplateURL4CF" }, "/aws.module-opsworks-main.template" ] ] },
         "Parameters": {
           "CookbooksURL4CF": {
             "Ref": "CookbooksURL4CF"
@@ -200,6 +200,58 @@
               "StackVPC",
               "Outputs.VPC"
             ]
+          }
+        }
+      }
+    },
+    "StackWebServer" : {
+      "Type": "AWS::CloudFormation::Stack",
+      "DependsOn": [
+        "StackMain"
+      ],
+      "Properties": {
+        "TemplateURL": { "Fn::Join": [ "", [ "https://", { "Ref": "TemplateURL4CF" }, "/aws.module-opsworks-web.template" ] ] },
+        "Parameters": {
+          "KeyPair": {
+            "Ref": "KeyPair"
+          },
+          "Prefix": {"Ref": "Prefix"},
+          "SubnetPrivateApp1": {
+            "Fn::GetAtt": [
+              "StackVPC",
+              "Outputs.SubnetPrivateApp1"
+            ]
+          },
+          "SubnetPrivateApp2": {
+            "Fn::GetAtt": [
+              "StackVPC",
+              "Outputs.SubnetPrivateApp2"
+            ]
+          },
+          "SubnetPublic1": {
+            "Fn::GetAtt": [
+              "StackVPC",
+              "Outputs.SubnetPublic1"
+            ]
+          },
+          "SubnetPublic2": {
+            "Fn::GetAtt": [
+              "StackVPC",
+              "Outputs.SubnetPublic2"
+            ]
+          },
+          "VPC": {
+            "Fn::GetAtt": [
+              "StackVPC",
+              "Outputs.VPC"
+            ]
+          },
+          "OpsWorksStackMain" : {
+            "Fn::GetAtt": [
+              "StackMain",
+              "Outputs.OpsWorksStackMain"
+            ]
+
           }
         }
       }
