--- a/CloudFormation/aws.module-opsworks-web.template
+++ b/CloudFormation/aws.module-opsworks-web.template
@@ -34,6 +34,11 @@
         "StackId": { "Ref": "OpsWorksStackMain" },
         "Name": "WebServer",
         "Type": "custom",
+        "CustomRecipes": {
+          "Setup": [
+            "webserver"
+          ]
+        },
         "EnableAutoHealing": "true",
         "AutoAssignElasticIps" : "true",
         "AutoAssignPublicIps" : "true",
