--- a/CloudFormation/aws.environment.template
+++ b/CloudFormation/aws.environment.template
@@ -37,6 +37,11 @@
       "Default": "10.104.16.0/22",
       "Type": "String"
     },
+    "AdminCIDR": {
+      "Description": "CIDR which could be ssh",
+      "Default": "219.87.142.18/24",
+      "Type": "String"
+    },
     "CookbooksURL4CF": {
       "Description": "Cookbooks URL for CloudFormation.",
       "Default": "s3-us-west-2.amazonaws.com/ch-cookbooks",
@@ -107,10 +112,30 @@
         }
       }
     },
-    "StackNatBastion": {
+    "StackSecurityGroup": {
       "Type": "AWS::CloudFormation::Stack",
       "DependsOn": [
         "StackVPC"
+      ],
+      "Properties": {
+        "TemplateURL": { "Fn::Join": [ "", [ "https://", { "Ref": "TemplateURL4CF" }, "/aws.module-securitygroup.template" ] ] },
+        "Parameters": {
+          "CIDRVPC": { "Ref": "CIDRVPC" },
+          "Prefix": { "Ref": "Prefix" },
+          "AdminCIDR": { "Ref": "AdminCIDR" },
+          "VPC": {
+            "Fn::GetAtt": [
+              "StackVPC",
+              "Outputs.VPC"
+            ]
+          }
+        }
+      }
+    },
+    "StackNatBastion": {
+      "Type": "AWS::CloudFormation::Stack",
+      "DependsOn": [
+        "StackVPC","StackSecurityGroup"
       ],
       "Properties": {
         "TemplateURL": { "Fn::Join": [ "", [ "https://", { "Ref": "TemplateURL4CF" }, "/aws.module-natbastion.template" ] ] },
@@ -145,6 +170,18 @@
             "Fn::GetAtt": [
               "StackVPC",
               "Outputs.SubnetPublic2"
+            ]
+          },
+	  "SecurityGroupBastion": {
+            "Fn::GetAtt": [
+              "StackSecurityGroup",
+              "Outputs.SecurityGroupBastion"
+            ]
+	  },
+          "SecurityGroupNat": {
+            "Fn::GetAtt": [
+              "StackSecurityGroup",
+              "Outputs.SecurityGroupNat"
             ]
           },
           "VPC": {
