--- a/CloudFormation/aws.module-opsworks-main.template
+++ b/CloudFormation/aws.module-opsworks-main.template
@@ -53,7 +53,7 @@
         "VpcId": { "Ref": "VPC" },
         "DefaultSubnetId": {"Ref": "SubnetPublic1"},
         "UseCustomCookbooks": true,
-        "UseOpsworksSecurityGroups": true,
+        "UseOpsworksSecurityGroups": false,
         "CustomJson": {
            "prefix": { "Ref": "Prefix" }
         }
